--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <input type="text" id="name" placeholder="Your Name">
     <input type="email" id="email" placeholder="Your Email">
     <input type="tel" id="number" placeholder="Enter phone number" />
-    <button onclick="submitForm()">Subscribe</button>
+    <button onclick="submitForm()">Submit</button>
 </div>
 
     <!-- <video autoplay muted loop id="bg-video">
@@ -984,5 +984,6 @@
     utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"
   });
 </script>
+
   </body>
 </html>
