--- a/Careers.html
+++ b/Careers.html
@@ -128,7 +128,7 @@
     <div class="cs_height_140 cs_height_lg_80"></div>
     <div class="cs_section_heading cs_style_1 cs_type_3">
       <div class="container">
-        <p class="cs_section_subtitle cs_accent_color cs_fs_21 mb-0 wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">Discover a opportunities
+        <p class="cs_section_subtitle cs_accent_color cs_fs_21 mb-0 wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">Discover our opportunities
         </p>
         <div class="cs_height_20 cs_height_lg_10"></div>
         <h2 class="cs_section_title cs_fs_68 mb-0">Join the Sunwest Global and experience a collaborative, multicultural environment that encourages your growth</h2>
@@ -143,10 +143,12 @@
         <div class="cs_grid_sizer"></div>
         <div class="cs_isotop_item">
           <div class="cs_portfolio cs_style_1">
-            <!-- <a href="portfolio-details.html" class="cs_portfolio_thumb cs_radius_5"><img src="assets/img/sales job.jpg" alt="Portfolio"></a> -->
+            <img src="assets/img/sales job.jpg" width="70%" alt="Portfolio">
             <div class="cs_portfolio_info">
-              <p class="cs_portfolio_title cs_fs_38">No vacancies at the moment!</p>
-              <a href="contact.html" class="cs_portfolio_btn">Contact Us</a>
+              <p class="cs_portfolio_title cs_fs_38"> Digital Marketing Sales Representative</p>
+
+              <a href="contact.html" class="cs_portfolio_btn">Contact Us</a> <br>
+              <a href="mailto:sunwestglobalgeneral@gmail.com?subject=Application%20for%20the%20post%20of%20Digital%20Marketing%20Sales%20Representative">📩 sunwestglobalgeneral@gmail.com</a>
             </div>
           </div>
         </div><!-- .cs_isotop_item -->
