--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
   </head>
   <body class="cs_dark">
-    <div class="popup-overlay" id="popupOverlay"></div>
-<div class="popup-container" id="popupForm">
-    <span class="close-btn" onclick="closePopup()">×</span>
-    <h4>Enter the details to Continue</h4>
-    <input type="text" id="name" placeholder="Your Name">
-    <input type="email" id="email" placeholder="Your Email">
-    <input type="tel" id="number" placeholder="Enter phone number" />
-    <button onclick="submitForm()">Submit</button>
-</div>
+      <!-- <div class="popup-overlay" id="popupOverlay"></div>
+  <div class="popup-container" id="popupForm">
+      <span class="close-btn" onclick="closePopup()">×</span>
+      <h4>Enter the details to Continue</h4>
+      <input type="text" id="name" placeholder="Your Name">
+      <input type="email" id="email" placeholder="Your Email">
+      <input type="tel" id="number" placeholder="Enter phone number" />
+      <button onclick="submitForm()">Submit</button>
+  </div> -->
 
     <!-- <video autoplay muted loop id="bg-video">
       <source src="./assets/img/body-video.mp4" type="video/mp4">
